[gd_scene load_steps=13 format=2]

[ext_resource path="res://Other/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/TNT.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/TimedHide.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=6]

[sub_resource type="QuadMesh" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 256 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -15, -486, 0, 0, 0, 0, -17, -57, 0, 0, 0, 0, -58, -58, 0, 0, 0, 0, -56, -478, 0, 0, 0, 0, -16, -486 )
}

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 5 )
enemy_template = ExtResource( 6 )

[node name="Level" type="Node2D" parent="."]

[node name="Background" type="MeshInstance2D" parent="Level"]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512, 512 )
scale = Vector2( 1024.62, 1024 )
mesh = SubResource( 3 )

[node name="Board" type="MeshInstance2D" parent="Level"]
self_modulate = Color( 0.917647, 0.937255, 0.847059, 1 )
position = Vector2( 512, 512 )
scale = Vector2( 512, 512 )
mesh = SubResource( 4 )

[node name="Lance" type="Node2D" parent="Level"]
position = Vector2( 512, 512 )

[node name="Mesh" type="MeshInstance2D" parent="Level/Lance"]
self_modulate = Color( 1, 0.0431373, 0.0431373, 0.356863 )
position = Vector2( 0, -256 )
scale = Vector2( 9.80625, 512 )
mesh = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Level/Lance"]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Lance/Area2D"]
position = Vector2( 0, -256 )
shape = SubResource( 2 )

[node name="SpawnPath" type="Path2D" parent="Level/Lance"]
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="Level/Lance/SpawnPath"]
position = Vector2( -15, -486 )
rotation = 1.57546

[node name="SpawnTimer" type="Timer" parent="Level"]
wait_time = 4.0
autostart = true

[node name="ClockBorder" type="StaticBody2D" parent="Level"]
position = Vector2( 512, 512 )
collision_layer = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/ClockBorder"]
visible = false
build_mode = 1
polygon = PoolVector2Array( 0, -512, 91, -508, 245, -455, 387, -345, 478, -198, 512, -42, 503, 113, 440, 266, 363, 368, 243, 453, 95, 507, -58, 511, -215, 467, -333, 395, -426, 286, -488, 164, -517, 4, -490, -161, -426, -284, -336, -392, -218, -468, -89, -503 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 479, 713 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 6 )]
position = Vector2( 818, 286 )
rotation = 2.32981
scale = Vector2( 1, 1 )

[node name="TNT" parent="Enemies" instance=ExtResource( 2 )]
position = Vector2( 714, 663 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 6 )]
position = Vector2( 208, 377 )
rotation = 0.823215

[node name="Enemy3" parent="Enemies" instance=ExtResource( 6 )]
position = Vector2( 666, 613 )
rotation = -2.65604
scale = Vector2( 1, 1 )

[node name="Enemy4" parent="Enemies" instance=ExtResource( 6 )]
position = Vector2( 792, 739 )
rotation = -2.3857

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 1024.0
theme = ExtResource( 1 )

[node name="Score" type="Label" parent="UI"]
margin_left = 34.0
margin_top = 34.0
margin_right = 207.0
margin_bottom = 73.0
text = "0"
align = 1

[node name="Instructions" type="Label" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -99.0
margin_right = 231.0
margin_bottom = -18.0
text = "Hold SPACE:
drag enemies"
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="UI/Instructions"]
wait_time = 3.0
autostart = true

[node name="DeathScreen" type="Panel" parent="UI"]
visible = false
self_modulate = Color( 1, 1, 1, 0.984314 )
anchor_top = 0.349
anchor_right = 1.0
anchor_bottom = 0.551
margin_left = 371.0
margin_top = -7.37601
margin_right = -371.0
margin_bottom = 7.776
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="UI/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = 28.5
margin_right = 67.0
margin_bottom = 73.5
shortcut = SubResource( 9 )
text = "Restart"

[node name="Label" type="Label" parent="UI/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -86.0
margin_right = 48.0
margin_bottom = -47.0
text = "Score"
align = 1

[node name="ScoreLabel" type="Label" parent="UI/DeathScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -34.0
margin_right = 48.0
margin_bottom = 5.0
text = "0"
align = 1

[connection signal="body_entered" from="Level/Lance/Area2D" to="." method="_on_Lance_body_entered"]
[connection signal="timeout" from="Level/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="lance_triggered" from="Player" to="." method="_on_Player_lance_triggered"]
[connection signal="player_killed" from="Player" to="." method="_on_Player_player_killed"]
[connection signal="enemy_killed" from="Enemies/Enemy" to="." method="_on_Enemy_enemy_killed"]
[connection signal="enemy_killed" from="Enemies/Enemy2" to="." method="_on_Enemy_enemy_killed"]
[connection signal="enemy_killed" from="Enemies/Enemy3" to="." method="_on_Enemy_enemy_killed"]
[connection signal="timeout" from="UI/Instructions/Timer" to="UI/Instructions" method="_on_Timer_timeout"]
[connection signal="pressed" from="UI/DeathScreen/Button" to="." method="_on_Restart_pressed"]
